fix text-align subs modal

--- a/src/app/components/subscription-modal/subscription-modal.component.css
+++ b/src/app/components/subscription-modal/subscription-modal.component.css
@@ -11,3 +11,7 @@
   flex-direction: column;
   align-items: center;
 }
+
+.wrapper p {
+  text-align: center;
+}
